# ucs2-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yml
src/: lib.rs  macros.rs
tests/: tests.rs
