[package]
name = "ucs2"
version = "0.3.2"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>", "Fredrik Aleksander", "Isaac Woods"]
description = "UCS-2 decoding and encoding functions"
repository = "https://github.com/rust-osdev/ucs2-rs"
keywords = ["ucs2", "no-std", "encoding"]
categories = ["encoding", "no-std"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
bit_field = "0.10"

[badges]
maintenance = { status = "passively-maintained" }
